welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:1: error: ';' expected but '(' found.
var vuBiscuit:Boolean() = false
                     ^